# SFML

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  create_project.py
inc/: EventLoop.h
src/: EventLoop.cpp  main.cpp
